# xbridge-mcp

./: .agent-context.md  .env.example  .gitignore  .mcp.json  .workflow-prompt.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GROK-DEV-CONTEXT.md  LICENSE  PUBLIC-SAFE-MANIFEST.md  README.md  SECURITY.md  STANDARDS.md  docker-compose.yml  pyproject.toml  run_server.py  server.json
.claude/agent-memory/xbridge-github-expert/: MEMORY.md  project_origin_main_audit.md
.claude/agents/: XBRIDGE-ANALYTICS-TRACKER.md  XBRIDGE-BRANDING-GURU.md  XBRIDGE-COMMUNITY-MANAGER.md  XBRIDGE-CONTENT-CREATOR.md  XBRIDGE-FRONTEND-DEV.md  XBRIDGE-GITHUB-CLEANUP.md  XBRIDGE-MARKETING-STRATEGIST.md  XBRIDGE-ONCHAIN-OPS.md  XBRIDGE-STRATEGY-LEAD.md  grok-mcp-expert.md
.github/workflows/: deploy-release.yml  docker.yml  publish-mcp.yml
.wrangler/cache/: pages.json  wrangler-account.json
assets/branding/: ls-assets.html
aws/: template.yaml
aws/src/create_free_key/: handler.py
aws/src/key_usage/: handler.py
aws/src/resend_key/: handler.py
aws/src/shared/: db.py  email.py
aws/src/validate_key/: handler.py
aws/src/webhook_handler/: handler.py
aws/src/xbrdg_discount/: handler.py
docs/: PRICING-AUDIT.md  UPDATE-PLAN.md  conneXt-mcp-config.example.json  issue-21-scope.md  xai-delta-2026-07-issue21-schemas.md  xai-delta-2026-07.md  xbridge-mcp-config.example.json
docs/marketing/archive/: 20260217-080431-README.md  20260217-080431-copy-core.json  20260217-080431-market-research.json  20260217-080446-README.md  20260217-080446-market-research.json  20260217-080557-copy-grounded.json  20260217-080557-social-grounded.json
docs/monetization/: DM-POSTS.md  LAUNCH-CHECKLIST.md  metrics.csv
docs/plans/: 2025-02-12_image_generation_implementation_plan.md
docs/superpowers/plans/: 2026-03-30-vps-migration.md  2026-06-07-de-aws-billing-excision.md
docs/superpowers/specs/: 2026-03-19-payment-design.md  (+1 more)
docs/wiki/: Home.md  Setup.md  Tools-Reference.md  XBRDG-Loyalty.md  _Sidebar.md
grok_mcp_server/: __init__.py  pyproject.toml  server.py  session_manager.py  tool_chains.py
posts/: README.md
posts/day-02-march-19/: post-0900-athlaunched.md  post-1100-antiAI.md  post-1300-thread-pumpfun1b.md  post-1530-holder5.md  post-1730-brokedev.md  post-1930-chartupdate.md  post-2100-galaxybrain.md  post-2300-fairnessstack.md  schedule.md
posts/day-03-march-21/: schedule.md  x-community-playbook.md  youtube-edit-script.md
scripts/: deploy.sh  gen-key.py  gen-keypair.py  vps-setup.sh  xbridge-launch.sh
site/: app.js  community-playbook.md  guide.html  index.html  launch-copy.md  styles.css  usage-examples.html
site/assets/: combot-announcements.md  combot-moderation-setup.md  meme-captions.md  tweet-thread.md  video-script-over9000.md  video-script-xbrdg.md
tests/: test_audio_tools.py  test_core.py  test_docs_tools.py  test_http_server_security.py  test_image_integration.py  test_image_tools.py  test_key_provisioning.py  test_key_validator.py  test_pr_config_files.py  test_session_manager.py  test_stt_tools.py  test_tokenizer_free_limit.py  test_tool_chains.py  test_validate_key.py  test_webhooks.py
xbrdg-site/: GROK.md  index.html
xbridge_mcp/: .coderabbit.yaml  GROK.md  __init__.py  http_server.py  key_validator.py  server.py  session_manager.py  token_counter.py  tokenizer.py  tool_chains.py
