[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grok-mcp-server"
version = "1.0.0"
description = "MCP Server for xAI Grok API - Chat, Web Search, and X Search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MCP Creator"}
]
keywords = ["mcp", "grok", "xai", "ai", "search", "twitter", "x"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
grok-mcp = "grok_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["grok_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
