[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xbridge-mcp"
version = "2.1.0"
description = "xBridge MCP - xAI Grok API tools for Model Context Protocol (chat, search, image/video gen)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "hrco"}
]
keywords = ["mcp", "grok", "xai", "ai", "search", "twitter", "x", "image-generation", "video-generation", "xbridge"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
xbridge-mcp = "xbridge_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["xbridge_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
